infrastructure/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
spec:
  ingressClassName: nginx # NÉLKÜLE az nginx figyelmen kívül hagyja!
  rules:
    - host: argocd.lab.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: argocd
              port:
                number: 80 # a Service portja, NEM a konténer portja
